feature(11): refatorando para deixar as informacoes em jsons separados, aguardando para uma api futura

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,9 +20,11 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm run build
+      - run: touch dist/.nojekyll
       - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
