--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.2"
+    "astro": "^5.13.2",
+    "lucide-react": "^0.539.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@astrojs/react": "^4.3.0",
+    "@types/react": "^19.1.10",
     "sass": "^1.90.0"
   }
 }
